fixed z-index main content wrapper

--- a/src/components/Wrappers/MainContent/MainContent.css
+++ b/src/components/Wrappers/MainContent/MainContent.css
@@ -6,6 +6,7 @@
     padding: .24em .3em .25em;
     font-size: 12px !important;
     padding: 1rem;  
+    z-index: 1000;
 }
 
 .mc-title:after {
